[package]
name = "state-perf-tool"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bsperftool"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
tokio = "1.37.0"
firewood = { git = "https://github.com/ava-labs/firewood", version = "*" }
ctrlc = "3.4.4"
ethers = "2.0.14"
rand = "0.8.5"
futures = "0.3.30"
async-trait = "0.1.80"
chrono = "0.4.38"
hex = "0.4.3"
